grpc-jexpress-template/envoy.yml
admin:
    access_log_path: /tmp/admin-access.log
    address:
        socket_address:
            address: 0.0.0.0
            port_value: 9901

static_resources:
    listeners:
        - name: listener1
          address:
              socket_address:
                  address: 0.0.0.0
                  port_value: 51051
          filter_chains:
              - filters:
                    - name: envoy.http_connection_manager
                      typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          stat_prefix: grpc_json
                          codec_type: AUTO
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: local_service
                                    domains: ["*"]
                                    routes:
                                        - match:
                                              prefix: "/"
                                          route:
                                              cluster: grpc
                                              timeout: { seconds: 60 }
                          http_filters:
                              - name: envoy.grpc_json_transcoder
                                typed_config:
                                    '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                                    proto_descriptor: "/tmp/sample_proto_descriptor_set.pb"
                                    services: ["service.UserService"]
                                    print_options:
                                        add_whitespace: true
                                        always_print_primitive_fields: true
                                        always_print_enums_as_ints: false
                                        preserve_proto_field_names: false
                              - name: envoy.router
                                typed_config:
                                    '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    clusters:
        - name: grpc
          connect_timeout: 1.25s
          type: LOGICAL_DNS
          lb_policy: ROUND_ROBIN
          dns_lookup_family: V4_ONLY
          http2_protocol_options: {}
          load_assignment:
              cluster_name: grpc
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: host.docker.internal
                                      port_value: 50051
